--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tldraw/tldraw": "^2.0.0-canary.ba4091c59418",
-    "next": "14.0.3",
-    "react": "^18",
-    "react-dom": "^18"
+   
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -20,6 +17,10 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
-    "typescript": "^5"
+    "typescript": "^5",
+     "@tldraw/tldraw": "^2.0.0-canary.ba4091c59418",
+    "next": "14.0.3",
+    "react": "^18",
+    "react-dom": "^18"
   }
 }
