--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-   
+    "next": "14.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -19,7 +19,6 @@
     "eslint-config-next": "14.0.3",
     "typescript": "^5",
      "@tldraw/tldraw": "^2.0.0-canary.ba4091c59418",
-    "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
   }
